# adlcv-group-1

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
src/super_mario_diffusion/: train.py
src/super_mario_diffusion/ex3/: ex3_main.py  text_inver_dataset.py
tests/: test_data.py
